--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+opencv_python==4.0.1.24
+tensorflow==1.13.1
 scikit_image==0.14.2
+pyclipper==1.1.0.post1
 numpy==1.16.2
 absl_py==0.7.1
-tensorflow==1.13.1
+matplotlib==3.0.3
 xxhash==1.3.0
 absl==0.0
 skimage==0.0
